examples/test/testpolicy5375.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5375
  namespace: namespace177
spec:
  podSelector:
    matchLabels:
      key18: value19
      key1: value37
      key40: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value43
          key46: value44
      podSelector:
        matchLabels:
          key24: value4
